Fix merge issues